[build-system]
requires = ["hatchling","aiohttp"]
build-backend = "hatchling.build"

[project]
name = "yr_meteogram_util"
version = "0.0.1"
authors = [
  { name="Andreas Gunnerås", email="andreas@gunneras.se" },
]
description = "A package for downloading and maniuplating meteograms from YR"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/d95andek/yr_meteogram_util"
Issues = "https://github.com/d95andek/yr_meteogram_util/issues"